@@ -9,6 +9,9 @@ New in 1.9.46:
   include_schemes, ppd_device_id, ppd_make, ppd_make_and_model,
   ppd_model_number, ppd_product, ppd_psversion, ppd_type and
   ppd_natural_language arguments.
+* cups.ppdSetConformance() method.
+* cups.PPD_CONFORM_RELAXED constant.
+* cups.PPD_CONFORM_STRICT constant.
 
 New in 1.9.45:
 
