@@ -1,3 +1,7 @@
+2009-04-14  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c (cups_ppdSetConformance): New method (trac #3).
+
 2009-03-20  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getDevices): New optional arguments
